# inventpri-rust-api

./: .env  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_alter_table.rs  m20220101_000003_alter_pirce_type.rs
src/: main.rs
src/database/: mod.rs
src/entity/: item.rs  mod.rs  post.rs  prelude.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/utilities/: mod.rs
